src/test/ui/return-disjoint-regions.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/return-disjoint-regions.rs:3:13
   |
LL |     let y = &x;
   |             ^^ borrowed value does not live long enough
LL |     (y, y)
LL | }
   |  -
   |  |
   |  `x` dropped here while still borrowed
   |  borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
